Fixed bug #42818 ($foo = clone(array()); leaks memory)